Fixes from new <Type>() to <Type>.valueOf()