@@ -300,9 +300,9 @@ public class Test extends TestCase{
 		
 		JSONArray array1=new JSONArray();
 		array1.add("abc\u0010a/");
-		array1.add(new Integer(123));
-		array1.add(new Double(222.123));
-		array1.add(new Boolean(true));
+		array1.add(Integer.valueOf(123));
+		array1.add(Double.valueOf(222.123));
+		array1.add(Boolean.valueOf(true));
 		System.out.println("======array1==========");
 		System.out.println(array1);
 		System.out.println();
